# stitch

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  artifact.md  benchmark_compare.sh  benchmarking.md  gen_bindings.sh  gen_bindings_linux.sh
.github/workflows/: build_debug.yml  build_release.yml  clippy.yml  test.yml  tests.yml
benches/: compress_bench.rs  logo_train_200.rs
data/: dials.json  hof.json  lists_dc.json  map.json  nuts_bolts.json  simple.json  test_111.json  towers.json  train_1.json  train_180.json  train_19.json  train_19_frontiers.json  train_1_hard.json  train_2.json  train_200.json  train_33.json  train_39.json  train_40.json  train_49.json  train_52.json  train_66.json  train_81.json  train_99.json
data/basic/: cex.json  ctx_thread_1.json  ctx_thread_2.json  ctx_thread_twice.json  furniture-small.json  hof.json  identical.json  issue108.json  issue108_2.json  lio_test1.json  lio_test2.json  map.json  map2.json  map3.json  map4.json  map_minimal.json  safe_ctx_thread_bug.json  simple1.json  simple2.json  simple3.json  simple4.json  simple5.json  simple_hof.json  symbol_weighting_test_1.json  symbol_weighting_test_2.json  tmp_crash.json  tmp_minimal.json
data/cogsci/: bridge.json  castle.json  city.json  dials.json  furniture.json  house.json  nuts-bolts.json  wheels.json
data/dc/: dc_logo_log.json  logo_iteration_1.json  logo_iteration_1_stitchargs.json
data/egc/: simple_0.json
data/expected_outputs/: 10-smc.json  10.json  bridge-a1-i1.json  (+49 more)
examples/: stitch.rs
experiments/: Makefile  README.md  ablation.sh  analyze.py  bench_dreamcoder.sh  bench_dreamcoder_all.sh  bench_stitch.sh  bench_stitch_all_latest.sh  build_small_cogsci.sh  case_study_2.sh  claim-2.sh  claim-3.sh  claim-4.sh  cleanup.sh  cs2_ex1.sh  cs2_ex2.sh  cs2_ex3.sh  data_extractor.py  experiments.sh  extract-ablation-results.sh  extract_all_data.sh  extract_data.py  extract_from_logs.sh  launch_dreamcoder_iteration.sh  launch_dreamcoder_run.sh  launch_stitch_run.sh  log_extractor.py  origami_stitch.sh  out.json  plot.py  plot_cs2.py  process_all.sh  programs_list_to_dc.py  readme.md  run_dreamcoder.sh  run_experiments.sh  split_data.py
scripts/: create_python_tests.py  makeListTasks.py
src/: alt_dom_expr_ids.rs  bottom_up.rs  compression.rs  convert.py  dom_expr.rs  domain.rs  egg_utils.rs  egraphs.rs  eval.rs  execution_guidance.rs  expand_variable.rs  expansion.rs  expr.rs  extraction.rs  formats.rs  lib.rs  macros.rs  main.rs  old.rs  old_egg.rs  parse_types.rs  pattern_args.rs  rewriting.rs  run_with_timeout.rs  sampler.rs  simple_domain.rs  smc.rs  symvar.rs  tdfa.rs  test_utils.rs  top_down.rs  types.rs  util.rs  zipper.rs  ziptrie.rs
test_data/: dfa.json
tests/: fuzz_symbol_weighting_test.rs  integration_tests.rs  simple.rs  tdfa_test.rs
(+1978 files in other folders)
