[package]
name = "dreamegg"
version = "0.1.0"
authors = ["Matt Bowers <mattb6503@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.6.0"
log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"
# example of enabling a crate feature
# serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
clap = { version = "3.1.0", features = ["derive"]}
symbolic_expressions = "5"
nix = "0.23.0"
serde = "1.0.130"
procspawn = "0.10.0"
lazy_static = "1.4.0"
sexp = "1.1.4"
itertools = "0.10.3"
rand = "0.8.4"

[profile.release]
debug = true # for flamegraphs