[package]
name = "stitch_core"
version = "0.1.0"
authors = ["Matthew Bowers <mlbowers@mit.edu>", "Theo X. Olausson <theoxo@mit.edu>"]
edition = "2018"
license = "MIT"
description = "A scalable abstraction learning library"
repository = "https://github.com/mlb2251/stitch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = {version = "1.0", features = ["preserve_order"]}
clap = { version = "3.1.0", features = ["derive"]}
serde = "1"
itertools = "0.10.3"
rand = "0.8.4"
parking_lot = "0.12.0"
colorful = "0.2.1"
rustc-hash = "1.1.0"
# lambdas = "0.2.0"
lambdas = { git = "https://github.com/mlb2251/lambdas", rev = "5d5b364"}


# [patch.crates-io]
# lambdas = { path = "../lambdas"}


# enable for flamegraphs
# [profile.release]
# debug = true

